# Cyber_bot

./: README.md  analyzer.py  app.py  fetcher.py  notifier.py  pyproject.toml  scraper.py  vector.py
.docai/: code_elements.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/fetch/: page.tsx
frontend/src/app/notify/: page.tsx
frontend/src/components/: DataCard.tsx  NavBar.tsx
frontend/src/types/: data.ts
frontend/src/utils/: api.ts
templates/: analysis.html  chat.html  fetcher.html
